# BasicGL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/basicgl/: BasicGL.cpp  BasicGL.h  CMakeLists.txt  Camera.cpp  Camera.hpp  Element.cpp  Element.hpp  Elements.hpp  Font.cpp  Font.hpp  Keyboard.hpp  LightSource.cpp  LightSource.hpp  Manager.cpp  Manager.hpp  Mouse.hpp  OBJ.cpp  OBJ.hpp  Plot.cpp  Plot.hpp  Point.cpp  Point.hpp  Serie.cpp  Serie.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  win_unistd.c  win_unistd.h
src/cmake/: basicglConfig.cmake.in
src/examples/: CMakeLists.txt  heart.cpp  light.cpp  obj.cpp  paint.cpp  plot.cpp  robot.cpp  snowman.cpp  teapot.cpp  text.cpp  texture.cpp  triangle.cpp  viewer.cpp  webcam.cpp
